fix soc media alignment

--- a/src/routes/landing/landing.less
+++ b/src/routes/landing/landing.less
@@ -607,7 +607,7 @@ tr.row.report {
   // overflow-y: scroll;
   // width: 0;
   height: 85px;
-  width: 80px;
+  width: 100px;
   overflow: hidden;
 
   @media screen and (max-height: 470px){
